c01/src/FeedComponents/Feed.css
.container_feed{
    display: flex; 
    justify-content: center;
    align-items: center;
    flex-direction: column;
    font-family: Arial, Helvetica, sans-serif;
}

.container_feed input{
    width: 300px;
    font-size: 20px;
}

.profile_framing{
    border-radius: 50%;
    width: 100px;
    height: 100px;
}

.card {
	background-color: #ffffff;
	border-radius: 20px ;
	padding: 40px;
}

.split {
    height: 100%;
    position: fixed;
    z-index: 1;
    top: 100;
    overflow-x: hidden;
  }
  

  .left {
    left: 0;
    width: 70%;
    height: 100vh;
  }
  
  .feedSection {
    margin-left: 10vh;
    margin-right: 10vh;
  }

  .right {
    right: 0;
    width: 30%;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgb(82, 72, 72);
  }
  
.schedule{
    color: #ffffff;
    background: rgb(255, 243, 217);
    width: 80%;
    height: 80%;
    border-radius: 20px;
}

.card_feed {
	background-color: #ffffff;
	border-radius: 20px ;
	padding: 40px;
}

.container_feed {  
  padding: 50px;  
}  

.card {
background-color: #ffffff;
border-radius: 20px ;
padding: 40px;
}

.text{
border: none ;
border-color: transparent;
}

.postBox{
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  margin-top: 5vh;
}

.barProfilePic {
  max-width: 100px;
  height: 100px;
  margin-right: 3vh;
  border-radius: 50%;
}

.textarea{
  height: auto;
  max-width: 100%;
  padding: 10px;
  border-radius: 10px;
  border: 1px solid #ccc;
  box-shadow: 1px 1px 1px #999;
  margin-right: 100px;
}

